# ros2

./: .gitignore  CMakeLists.txt  package.xml
hello_world/src/: publisher_cpp.cpp  subscriber_cpp.cpp
lidar_node/src/lidarNode/: CMakeLists.txt  package.xml
meu_projeto_ws/src/contar_numeros/: CMakeLists.txt  package.xml
meu_projeto_ws/src/contar_numeros/src/: publisher_numero.cpp  subscriber_numero.cpp
meu_projeto_ws/src/cpp_pkg/: CMakeLists.txt  GUIDE.md  package.xml
meu_projeto_ws/src/cpp_pkg/src/: add_two_ints_client.cpp  add_two_ints_client_no_oop.cpp  add_two_ints_server.cpp  publisher_cpp.cpp  template.cpp
meu_projeto_ws/src/lidarNode/src/: publisher_lidar.cpp
meu_projeto_ws/src/my_first_robot/: CMakeLists.txt  package.xml
meu_projeto_ws/src/my_first_robot/src/: walker_node.cpp
meu_projeto_ws/src/turtlesim_sensor/: CMakeLists.txt  package.xml
meu_projeto_ws/src/turtlesim_sensor/src/: arduino_turtle_bridge.cpp
meu_projeto_ws/src/velocity_monitor/: setup.cfg
ros2_ws/src/velocity_monitor/: package.xml  setup.py
ros2_ws/src/velocity_monitor/velocity_monitor/: monitor_node.py
turtlesim_sensor/cpp_pkg/: CMakeLists.txt  package.xml
turtlesim_sensor/cpp_pkg/src/: arduino_turtle_bridge.cpp
